_css/main.css
/* ... */
.space-evenly {
  justify-content: space-evenly;
}

.align-center {
  align-items: center;
}

.flex-column {
  flex-direction: column;
}

.wrap {
  flex-wrap: wrap;
}

/********* NAVIGATION BAR *************/
nav {
  margin: 0 auto;
  width: 100%;
  height: 70px;
  background: #2a4a5e;
  position: fixed;
  z-index: 999;
  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3803921569);
  transition: 0.4s;
}
nav ul {
  list-style: none;
}
nav .nav-logo {
  background-color: #1d3851;
}
nav .nav-logo a {
  width: 80px;
  height: 70px;
}
nav .nav-logo img {
  width: 60px;
  padding: 5px 10px;
}
nav .nav-links {
  margin-left: -435px;
}
nav .nav-links li {
  margin: 0 35px;
  text-transform: uppercase;
}
nav .nav-links li::before {
  width: 80px;
  height: 3px;
  position: absolute;
  top: 43px;
  left: 50%;
  right: initial;
  content: "";
  background: #9cd1ff;
  transform: translateX(-50%) translateY(-50%);
  opacity: 0;
  transition: 0.3s;
}
nav .nav-links li:hover::before {
  opacity: 1;
}
nav .nav-links .link-sban {
  font-family: TF2Build !important;
}
nav .nav-links .link-sban:hover::before {
  background: #ff9c9c;
  opacity: 1;
}
nav .nav-links li a {
  color: #fff;
  font-weight: bold;
  font-family: TF2Build;
}
nav .nav-socials li a {
  color: #fff;
  font-weight: bold;
}
nav .nav-links .link-sban img {
  width: 20px;
  top: 4px;
}
nav .nav-socials {
  margin: 0 30px;
}
nav .nav-socials li {
  margin: 0 5px;
}
nav .nav-socials li .nav-twitter {
  background: #111;
  padding: 15px 35px;
  border-radius: 7px;
  font-size: 1.1em;
  transition: 0.3s;
}
nav .nav-socials li .nav-twitter:hover {
  background: #464646;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}
nav .nav-socials li .nav-discord {
  background: #5c87b5;
  padding: 15px 35px;
  border-radius: 7px;
  font-size: 1.1em;
  transition: 0.3s;
}
nav .nav-socials li .nav-discord:hover {
  background: #81b5ec;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.bbq-overlay {
  position: fixed;
  top: 25px;
  left: 15px;
  right: 15px;
  z-index: 990;
  min-height: 50px;
  background-color: gold;
  color: #000;
  margin: 0 auto;
  padding: 0 32px;
  box-sizing: border-box;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  transition: 0.3s;
}

nav:hover + .bbq-overlay, .bbq-overlay:hover {
  top: 75px;
}

.nav-toggle {
  display: none;
  flex-direction: column;
  cursor: pointer;
}

/********* HEADER ***********/
header {
  width: 100%;
  z-index: 10;
  height: 435px;
}
header::before {
  content: "";
  position: absolute;
  background-color: #151a26;
  width: 100%;
  height: 100px;
  box-shadow: 0px 7px 13px rgba(0, 0, 0, 0.5);
  z-index: -1;
}

.hero {
  width: 1250px;
  margin: 0 auto;
  padding: 20px;
  box-sizing: border-box;
}
.hero .logo-title img {
  width: 120px;
  margin: 0 10px;
  display: block;
}
.hero .logo-title h1 {
  font-family: TF2Secondary;
  font-size: 2.3em;
  /**text-shadow: -2px -2px 0 #373737, 2px -2px 0 #373737, -2px 2px 0 #373737, 2px 2px 0 #373737;**/
  text-shadow: 7px 7px 6px rgba(0, 0, 0, 0.5882352941);
  text-transform: uppercase;
  text-align: left;
  color: #fff;
  margin: 0;
}
.hero .logo-title span.tf {
  font-size: 1.5em;
  line-height: 0.9em;
  font-family: TF2Build;
}
.hero .logo-title h2 {
  font-family: TF2Secondary;
  font-size: 1.4em;
  color: #fff;
  text-align: center;
  margin: 0 auto 20px auto;
}
.hero .logo-title #hero-cta {
  width: 380px;
  padding: 14px 24px;
  font-family: TF2Build;
  color: #353535;
  background: linear-gradient(0deg, rgb(199, 186, 159) 35%, rgb(255, 249, 235) 100%);
  border-radius: 9px;
  margin: 0 auto;
  text-align: center;
  font-size: 1.3em;
  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.38);
  height: 35px;
  margin: unset;
}
.hero .logo-title #hero-cta:hover {
  color: #ECE3CB;
  background: linear-gradient(180deg, #9D4F3F, #70392D, #512A20) padding-box, linear-gradient(180deg, #DA9C77, #AD5444 10%, #572D22 90%, #2C1813 100%) border-box;
}
.hero .logo-title #hero-cta span.cta-join {
  font-family: TF2Build;
}

.news_home {
  background-color: #1c1a19;
  border-radius: 3px;
  margin: 15px;
  padding: 15px 0;
  box-shadow: 1px 1px 2px #000;
}
.news_home .container {
  padding: 5px 20px 15px 20px;
}
.news_home .container h1 {
  margin: 0;
  font-size: 1.5em;
  font-family: TF2Build;
}
.news_home .container h1 .fa-rss {
  margin-right: 10px;
}
.news_home .container h1 a {
  font-family: TF2Secondary;
  color: #fff;
  text-decoration: underline;
}
.news_home .main-news {
  padding: 20px;
}
.news_home .main-news a {
  color: #000;
}
.news_home .main-news a img {
  width: 650px;
  display: flex;
  margin: 0 auto;
}
.news_home .main-news p, .news_home .main-news h2, .news_home .main-news h3, .news_home .main-news h4, .news_home .main-news h5, .news_home .main-news h6 {
  color: #fff !important;
}
.news_home .news-list {
  width: 100%;
  margin: 0 auto;
  padding: 0 15px;
  flex-direction: column;
  box-sizing: border-box;
}
.news_home .news-list a {
  margin: 4px 0;
  background: linear-gradient(0deg, rgb(199, 186, 159) 35%, rgb(255, 249, 235) 100%);
  border-radius: 7px;
}
.news_home .news-list .news {
  width: 100%;
  height: 50px;
  box-sizing: border-box;
  overflow: hidden;
}
.news_home .news-list .news:hover > .news-img {
  filter: brightness(0.8);
}
.news_home .news-list .news p.date-news {
  font-size: 1em;
  font-family: TF2Secondary;
  margin: 0 10px;
  color: #1c1a19;
}
.news_home .news-list .news p.titre-news {
  font-family: TF2Secondary;
  font-weight: bold;
  font-size: 1.2em;
  color: #1c1a19;
  margin: 0 10px;
}
.news_home .news-list .news .news-img {
  width: 85px;
  filter: brightness(0.3);
  transition: 0.3s;
}

.mod {
  border-left: 8px solid #315e31;
}

.commu {
  border-left: 8px solid #4a779f;
}

.offi {
  border-left: 8px solid orange;
}
/* ... */

